--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,22 @@
+//different screens/devices
 $Phone-width:  500px;
 $tablet-width:  768px;
 $desktop-width:  1024px;
 
+
+// tailwindcss config
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+//font family
  @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
 
+ /*
+=============== 
+Variables
+===============
+*/
 :root{
   --primary-clr: #197EF2;
   --neutral-clr: #7C7E80;
@@ -20,16 +30,44 @@ $desktop-width:  1024px;
   --btn-disabled-clr: #6BA6FF;
 }
 
+
+/*
+=============== 
+Global Styles
+===============
+*/
+::after,
+::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-    margin: 0;
-    padding: 0;
+   margin:0;
     font-family: " Rubik" sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+     line-height: 1.5;
+  font-size: 0.875rem;
   }
+  ul {
+  list-style-type: none;
+}
+a {
+   color: inherit;
+  text-decoration: none;
+  font-weight: bold;
+}
   
   code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
+     font-family: " Rubik" sans-serif;
   }
+@media screen and (max-width:#{$phone-width}) {
+        
+}
+@media screen and (max-width:#{$tablet-width}) {
+        
+}
+
   
