--- a/src/index.scss
+++ b/src/index.scss
@@ -4,9 +4,9 @@ $tablet-width:  768px;
 $desktop-width:  1024px;
 
 // tailwind config
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+// @tailwind base;
+// @tailwind components;
+// @tailwind utilities;
 
 // font family
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;700&display=swap');
@@ -18,6 +18,7 @@ Variables
 */
 
 :root{
+  --menu-bgc: #E6F0FF;
   --primary-clr: #197EF2;
   --neutral-clr: #7C7E80;
   --black-clr: #1E1717;
@@ -40,10 +41,101 @@ body {
   }
   
   code {
-    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-      monospace;
+    font-family: "Rubik" sans-serif;
   }
-  
+
+  .MenuDiv {
+    background-color: var(--menu-bgc);
+    width: 192px;
+    height: 1008px;
+    padding-top: 100px;
+  }
+  .listItem {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 30px 0 0 15px;
+    color: var(--menuList-clr);
+    font-family: "Rubik" sans-serif;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 18.96px;
+  }
+  .listItem span {
+    padding-left: 10px;
+  }
+  .listItem:active {
+    color: var(--menu-active-clr);
+  }
+  .adminDiv {
+    height: 83px;
+    width: 1218px;
+    left: 19px;
+    top: 26px;
+    border-radius: 8px;
+    background-color: var(--Header-bgc);
+    position: absolute;
+    display: flex;
+    justify-content: space-between;
+    padding-right: 10px;
+    box-shadow: 1px 1px 5px lightgray;
+  }
+  .logo {
+    padding: 10px 0 0 10px;
+  }
+  .UserDiv {
+    width: 25%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .userContent {
+    width: 65%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .searchInp {
+    width: 500px;
+    height: 40px;
+    border: 1px solid #6ba6ff;
+    border-radius: 10px;
+    padding: 10px;
+  }
+  .searchInp::placeholder {
+    color: var(--menuList-clr);
+    font-family: "Rubik" sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+  }
+  .menuIcon {
+    color: var(--menuList-clr);
+    font-size: 25px;
+  }
+  .notify {
+    color: var(--menuList-clr);
+    font-size: 20px;
+  }
+  .setting {
+    background-color: var(--white-clr);
+    border-radius: 50%;
+  }
+  .userName {
+    color: var(--menuList-clr);
+    font-family: "Rubik" sans-serif;
+    font-size: 16px;
+  }
+  .userRole {
+    color: var(--userInfo-clr);
+    font-style: Medium;
+    font-family: "Rubik" sans-serif;
+    font-weight: 600;
+    font-size: 14px;
+  }
+  .page{
+    display: flex;
+  }
   // small screen
   @media screen and (max-width:#{$phone-width}) {
     
