--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,9 @@
   --menuList-clr: #6ba6ff;
   --Header-bgc: #fffefe;
   --userInfo-clr: #6b788e;
+  --dashboard-clr: #0065ff;
+  --payment-clr: #f5f6f7;
+  --payText-clr: #b3b9c4;
   --primary-clr: #197ef2;
   --neutral-clr: #7c7e80;
   --black-clr: #1e1717;
@@ -27,7 +30,7 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: " Rubik" sans-serif;
+  font-family: " Rubik", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -49,7 +52,7 @@ code {
   align-items: center;
   padding: 30px 5px 0 5px;
   color: var(--menuList-clr);
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-size: 17px;
   line-height: 18.96px;
@@ -97,7 +100,7 @@ code {
 }
 .searchInp::placeholder {
   color: var(--menuList-clr);
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
@@ -105,10 +108,12 @@ code {
 .menuIcon {
   color: var(--menuList-clr);
   font-size: 25px;
+  cursor: pointer;
 }
 .notify {
   color: var(--menuList-clr);
   font-size: 20px;
+  cursor: pointer;
 }
 .setting {
   background-color: var(--white-clr);
@@ -116,13 +121,13 @@ code {
 }
 .userName {
   color: var(--menuList-clr);
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
   font-size: 16px;
 }
 .userRole {
   color: var(--userInfo-clr);
   font-style: Medium;
-  font-family: "Rubik" sans-serif;
+  font-family: "Rubik", sans-serif;
   font-weight: 600;
   font-size: 14px;
 }
@@ -130,5 +135,162 @@ code {
   display: flex;
 }
 .Body {
-  margin-top: 200px;
+  margin-top: 130px;
+}
+.courseDiv {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.eachCourse {
+  width: 300px;
+  height: 350px;
+  margin: 10px 0;
+  border: 0.5px solid var(--neutral-clr);
+  border-radius: 5px;
+}
+.eachCourse img {
+  width: 100%;
+}
+.course {
+  color: var(--btn-clicked-clr);
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  padding: 0 10px;
+  word-spacing: 5px;
+}
+.date {
+  color: var(--neutral-clr);
+  padding: 0 10px;
+  font-family: "Rubik", sans-serif;
+  font-size: 12px;
+}
+.priceDiv {
+  display: flex;
+  padding: 0 50px;
+  align-items: center;
+  justify-content: space-between;
+  color: var(--menuList-clr);
+  font-size: 12px;
+  font-weight: 500;
+  font-family: "Rubik", sans-serif;
+  padding: 0 5px;
+}
+.modules {
+  padding: 0 10px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 500;
+  font-size: 12px;
+  color: var(--neutral-clr);
+}
+.btnDiv {
+  width: 15%;
+  height: 50px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.first,
+.second {
+  width: 30px;
+  height: 30px;
+}
+.prevIcon,
+.nextIcon,
+.btnDiv p {
+  color: var(--primary-clr);
+}
+.eachPayment {
+  width: 80%;
+  height: 100px;
+  margin: 5px auto 10px;
+  padding: 0 20px;
+  background-color: var(--payment-clr);
+  display: flex;
+  justify-content: space-between;
+}
+.amountDiv {
+  width: 30px;
+  display: flex;
+  align-items: center;
+  font-family: "Rubik", sans-serif;
+  color: var(--neutral-clr);
+  font-size: 16px;
+}
+.nameDiv {
+  width: 35%;
+  height: 100px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.infoDiv {
+  padding-left: 10px;
+}
+.name {
+  font-size: 16px;
+  font-family: "Rubik", sans-serif;
+  font-weight: 400;
+  color: var(--btn-clicked-clr);
+}
+.invoice {
+  font-family: "Rubik", sans-serif;
+  font-size: 12px;
+  color: var(--payText-clr);
+}
+.statusDate {
+  font-family: "Rubik", sans-serif;
+  color: var(--payText-clr);
+  font-size: 16px;
+}
+.welcomeDiv {
+  height: 122px;
+  width: 1021px;
+  padding: 15px 10px 0;
+  border-radius: 8px;
+  text-transform: capitalize;
+  background-color: var(--dashboard-clr);
+}
+.welcome,
+.taskLevel {
+  font-family: "Rubik", sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 5px;
+  color: var(--menu-bgc);
+  text-align: left;
+}
+.userInfo {
+  font-family: "Rubik", sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 15px;
+  color: var(--menu-bgc);
+  text-align: left;
+}
+.eachProgress {
+  display: flex;
+  align-items: center;
+  height: 84px;
+  width: 347px;
+  border-radius: 8px;
+  padding: 16px 24px 16px 24px;
+}
+.progress {
+  height: 4px;
+  width: 183px;
+  border-radius: 4px;
+  background-color: var(--menu-bgc);
+  margin-bottom: 20px;
+}
+.progressLevel {
+  height: 6px;
+  width: 105px;
+  border-radius: 4px;
+  background-color: var(--neutral-clr);
 }
