--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
+/*
+===============
+Variables
+===============
+*/
 :root {
   --menu-bgc: #e6f0ff;
   --menu-active-clr: #003e9c;
@@ -12,6 +16,8 @@
   --dashboard-clr: #0065ff;
   --payment-clr: #f5f6f7;
   --payText-clr: #b3b9c4;
+  --work-clr: #7A8699;
+  --time-clr: #96C0FF;
   --primary-clr: #197ef2;
   --neutral-clr: #7c7e80;
   --black-clr: #1e1717;
@@ -23,22 +29,18 @@
   --btn-clicked-clr: #003e9c;
   --btn-disabled-clr: #6ba6ff;
 }
-* {
-  list-style: none;
-  text-decoration: unset;
-}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: " Rubik", sans-serif;
+  font-family: " Rubik" sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-} /*# sourceMappingURL=index.css.map */
+  font-family: "Rubik" sans-serif;
+}
 
 .MenuDiv {
   background-color: var(--menu-bgc);
@@ -46,23 +48,27 @@ code {
   height: 1008px;
   padding-top: 100px;
 }
+
 .listItem {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  padding: 30px 5px 0 5px;
+  padding: 30px 0 0 15px;
   color: var(--menuList-clr);
-  font-family: "Rubik", sans-serif;
+  font-family: "Rubik" sans-serif;
   font-weight: 400;
   font-size: 17px;
   line-height: 18.96px;
 }
+
 .listItem span {
   padding-left: 10px;
 }
+
 .listItem:active {
   color: var(--menu-active-clr);
 }
+
 .adminDiv {
   height: 83px;
   width: 1218px;
@@ -76,21 +82,25 @@ code {
   padding-right: 10px;
   box-shadow: 1px 1px 5px lightgray;
 }
+
 .logo {
   padding: 10px 0 0 10px;
 }
+
 .UserDiv {
   width: 25%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .userContent {
   width: 65%;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .searchInp {
   width: 500px;
   height: 40px;
@@ -98,46 +108,61 @@ code {
   border-radius: 10px;
   padding: 10px;
 }
-.searchInp::placeholder {
+
+.searchInp::-moz-placeholder {
   color: var(--menuList-clr);
-  font-family: "Rubik", sans-serif;
+  font-family: "Rubik" sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
 }
+
+.searchInp::placeholder {
+  color: var(--menuList-clr);
+  font-family: "Rubik" sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+}
+
 .menuIcon {
   color: var(--menuList-clr);
   font-size: 25px;
-  cursor: pointer;
 }
+
 .notify {
   color: var(--menuList-clr);
   font-size: 20px;
-  cursor: pointer;
 }
+
 .setting {
   background-color: var(--white-clr);
   border-radius: 50%;
 }
+
 .userName {
   color: var(--menuList-clr);
-  font-family: "Rubik", sans-serif;
+  font-family: "Rubik" sans-serif;
   font-size: 16px;
 }
+
 .userRole {
   color: var(--userInfo-clr);
   font-style: Medium;
-  font-family: "Rubik", sans-serif;
+  font-family: "Rubik" sans-serif;
   font-weight: 600;
   font-size: 14px;
 }
+
 .Page {
   display: flex;
   justify-content: space-between;
 }
+
 .Body {
   margin-top: 130px;
 }
+
 .courseDiv {
   margin: auto;
   display: flex;
@@ -145,6 +170,7 @@ code {
   align-items: center;
   flex-wrap: wrap;
 }
+
 .eachCourse {
   width: 290px;
   height: 350px;
@@ -152,9 +178,11 @@ code {
   box-shadow: 1px 1px 2px var(--neutral-clr);
   border-radius: 5px;
 }
+
 .eachCourse img {
   width: 100%;
 }
+
 .course {
   color: var(--btn-clicked-clr);
   font-family: "Rubik", sans-serif;
@@ -163,6 +191,7 @@ code {
   padding: 20px 10px 10px;
   word-spacing: 5px;
 }
+
 .date {
   color: var(--neutral-clr);
   padding: 0 10px 10px;
@@ -170,6 +199,7 @@ code {
   font-size: 12px;
   font-weight: 500;
 }
+
 .priceDiv {
   display: flex;
   padding: 0 20px;
@@ -180,11 +210,13 @@ code {
   font-weight: 500;
   font-family: "Rubik", sans-serif;
 }
+
 .priceDiv p {
   margin: 10px 0 20px;
   display: flex;
   align-items: center;
 }
+
 .modules {
   padding: 0 10px;
   font-family: "Rubik", sans-serif;
@@ -192,6 +224,7 @@ code {
   font-size: 12px;
   color: var(--neutral-clr);
 }
+
 .btnDiv {
   width: 20%;
   height: 50px;
@@ -200,19 +233,23 @@ code {
   justify-content: space-between;
   align-items: center;
 }
+
 .first,
 .second {
   width: 30px;
   height: 30px;
 }
+
 .prevIcon,
 .nextIcon,
 .btnDiv p {
   color: var(--primary-clr);
 }
+
 .paymentDiv {
   padding-top: 20px;
 }
+
 .eachPayment {
   width: 868px;
   height: 100px;
@@ -222,6 +259,7 @@ code {
   display: flex;
   justify-content: space-between;
 }
+
 .amountDiv {
   width: 30px;
   display: flex;
@@ -230,6 +268,7 @@ code {
   color: var(--neutral-clr);
   font-size: 16px;
 }
+
 .nameDiv {
   width: 35%;
   height: 100px;
@@ -237,68 +276,655 @@ code {
   justify-content: flex-start;
   align-items: center;
 }
+
 .infoDiv {
   padding-left: 10px;
 }
+
 .name {
   font-size: 16px;
   font-family: "Rubik", sans-serif;
   font-weight: 400;
   color: var(--btn-clicked-clr);
 }
+
 .invoice {
   font-family: "Rubik", sans-serif;
   font-size: 12px;
   color: var(--payText-clr);
 }
+
 .statusDate {
   font-family: "Rubik", sans-serif;
   color: var(--payText-clr);
   font-size: 16px;
 }
+
+.dashboardDiv {
+  width: 1080px;
+  padding: 0 20px;
+  margin: 0 5rem 0 30px;
+}
+
 .welcomeDiv {
-  height: 122px;
+  height: 112px;
   width: 1021px;
-  padding: 15px 10px 0;
+  padding: 25px 10px 0;
   border-radius: 8px;
   text-transform: capitalize;
   background-color: var(--dashboard-clr);
 }
+
 .welcome,
 .taskLevel {
   font-family: "Rubik", sans-serif;
   font-size: 12px;
   font-weight: 500;
-  line-height: 5px;
+  line-height: 20px;
+  padding-bottom: 10px;
   color: var(--menu-bgc);
   text-align: left;
 }
+
 .userInfo {
   font-family: "Rubik", sans-serif;
   font-size: 24px;
   font-weight: 500;
-  line-height: 15px;
+  line-height: 20px;
+  padding-bottom: 5px;
   color: var(--menu-bgc);
   text-align: left;
 }
+
 .eachProgress {
-  display: flex;
-  align-items: center;
-  height: 84px;
   width: 347px;
   border-radius: 8px;
-  padding: 16px 24px 16px 24px;
+  box-shadow: 1px 1px 1px var(--neutral-clr);
+  padding: 16px 24px 16px 40px;
+  margin-top: 20px;
 }
+
+.nameDiv {
+  width: 90%;
+  height: 45px;
+  font-family: "Rubik";
+  font-size: 12px;
+  font-weight: 500;
+  text-align: left;
+  color: var(--btn-disabled-clr);
+  display: flex;
+  justify-content: space-between;
+}
+
+.flexDiv {
+  padding-left: 10px;
+}
+
 .progress {
   height: 4px;
   width: 183px;
   border-radius: 4px;
   background-color: var(--menu-bgc);
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
+
 .progressLevel {
   height: 6px;
-  width: 105px;
+  width: 36%;
   border-radius: 4px;
   background-color: var(--neutral-clr);
 }
+
+.studentProgress {
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+.AdeolaprogressLevel {
+  width: 65%;
+  height: 6px;
+  border-radius: 4px;
+  background-color: var(--neutral-clr);
+}
+
+.YingprogressLevel {
+  width: 24%;
+  height: 6px;
+  border-radius: 4px;
+  background-color: var(--neutral-clr);
+}
+
+.TailorprogressLevel {
+  width: 72%;
+  height: 6px;
+  border-radius: 4px;
+  background-color: var(--neutral-clr);
+}
+
+.SmithBlackprogress {
+  width: 45%;
+  height: 6px;
+  border-radius: 4px;
+  background-color: var(--neutral-clr);
+}
+
+.blacksprogress {
+  width: 16%;
+  height: 6px;
+  border-radius: 4px;
+  background-color: var(--neutral-clr);
+}
+
+.ViewBtn button {
+  width: 250px;
+  height: 50px;
+  border: 1px solid var(--dashboard-clr);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--dashboard-clr);
+}
+
+.btnIconDiv {
+  width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.icon1,
+.icon3 {
+  font-size: 18px;
+  color: var(--dashboard-clr);
+}
+
+.icon2 {
+  font-size: 18px;
+  color: var(--btn-disabled-clr);
+}
+
+.progressText {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  text-align: left;
+  color: var(--btn-clicked-clr);
+}
+
+.icons {
+  width: 200px;
+}
+
+.ViewBtn-1 button {
+  width: 150px;
+  height: 50px;
+  border: 1px solid var(--dashboard-clr);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--dashboard-clr);
+}
+
+.Total {
+  height: 84px;
+  width: 347px;
+  left: 0px;
+  top: 184px;
+  border-radius: 8px;
+  box-shadow: 1px 1px 1px var(--neutral-clr);
+  padding: 16px 24px 16px 24px;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.total-course {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--success-clr);
+}
+
+.total-number {
+  font-family: "Rubik", sans-serif;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--menu-active-clr);
+}
+
+.total-student {
+  font-family: "Rubik", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--dashboard-clr);
+}
+
+.workStat {
+  height: 128px;
+  width: 347px;
+  left: 497px;
+  top: 557px;
+  border-radius: 8px;
+  padding: 16px 5px;
+  margin-top: 10px;
+  background-color: var(--payment-clr);
+}
+
+.Stat {
+  display: flex;
+  justify-content: space-between;
+}
+
+.eachStat {
+  height: 30px;
+  width: 347px;
+  left: 497px;
+  top: 557px;
+  border-radius: 8px;
+  padding: 16px;
+}
+
+.workStatTitle {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--btn-hover-clr);
+}
+
+.work {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--work-clr);
+}
+
+.time {
+  font-family: "Rubik";
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--time-clr);
+}
+
+.eachArticle {
+  height: 84px;
+  width: 311px;
+  left: 0px;
+  top: 0px;
+  border-radius: 8px;
+  padding: 8px 16px 8px 16px;
+  margin-top: 20px;
+  background-color: var(--payment-clr);
+}
+
+.lessonCourse {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--primary-clr);
+}
+
+.lessonTime {
+  font-family: "Rubik";
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--primary-clr);
+}
+
+.LessonImg {
+  /* width: 50px; */
+  display: flex;
+  position: relative;
+}
+
+.img-1 {
+  position: absolute;
+  height: 24px;
+  width: 27px;
+  left: 2px;
+  top: 0px;
+  border-radius: 0px;
+}
+
+.img-2 {
+  position: absolute;
+  height: 24px;
+  width: 27px;
+  left: 12px;
+  top: 0px;
+  border-radius: 0px;
+}
+
+.img-3 {
+  position: absolute;
+  height: 24px;
+  width: 27px;
+  left: 22px;
+  top: 0px;
+  border-radius: 0px;
+}
+
+.img-4 {
+  position: absolute;
+  height: 24px;
+  width: 27px;
+  left: 32px;
+  top: 0px;
+  border-radius: 0px;
+}
+
+.img-5 {
+  position: absolute;
+  height: 24px;
+  width: 27px;
+  left: 42px;
+  top: 0px;
+  border-radius: 0px;
+}
+
+.AnalyseDIv {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.quizHeading {
+  font-family: "Rubik";
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--menu-bgc);
+}
+
+.Quiz-Assignment {
+  height: 509px;
+  width: 481px;
+  padding: 10px 20px 0;
+  left: 216px;
+  top: 272px;
+  border-radius: 8px;
+  border: 1px solid var(--dashboard-clr);
+}
+
+.quizDiv {
+  margin: 20px 0 0;
+  padding-bottom: 4em;
+  display: flex;
+  justify-content: space-between;
+}
+
+.AssignmentText {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--btn-enabled-clr);
+}
+
+.eachAssignment {
+  width: 90%;
+  margin: 20px 0;
+  text-align: left;
+}
+
+.Assignment {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--menuList-clr);
+}
+
+.toSubmit {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--btn-clicked-clr);
+}
+
+.Score {
+  font-family: "Rubik";
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--btn-clicked-clr);
+}
+
+.AssignmentBtn button {
+  width: 90%;
+  height: 50px;
+  margin: auto;
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--dashboard-clr);
+  color: var(--dashboard-clr);
+}
+
+.quizRecordDiv {
+  margin-top: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.quizRecord {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--menuList-clr);
+}
+
+.Messages {
+  height: 509px;
+  width: 481px;
+  padding: 10px 20px 0;
+  left: 216px;
+  top: 272px;
+  border-radius: 8px;
+  box-shadow: 0 0 3px var(--neutral-clr);
+}
+
+.MessageBtn button {
+  width: 180px;
+  height: 50px;
+  padding: 0 5px;
+  font-family: Rubik;
+  font-size: 16px;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: left;
+  font-weight: 400;
+  border: 1px solid var(--dashboard-clr);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--dashboard-clr);
+}
+
+.allMessages {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--dashboard-clr);
+}
+
+.totalMessages {
+  font-family: Rubik;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 28px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--btn-clicked-clr);
+}
+
+.SumMessages {
+  height: 84px;
+  width: 347px;
+  left: 0px;
+  top: 0px;
+  border-radius: 8px;
+  padding: 16px 14px;
+  background-color: var(--Header-bgc);
+  box-shadow: 0 0 2px var(--neutral-clr);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.messageText {
+  font-family: "Rubik";
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--btn-hover-clr);
+  padding-bottom: 20px;
+}
+
+.messageNotification {
+  margin-top: 20px;
+}
+
+.firstMessage {
+  height: 42px;
+  width: 214px;
+  left: 0px;
+  top: 40px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  background-color: var(--payment-clr);
+}
+
+.otherMessages {
+  height: 42px;
+  width: 214px;
+  left: 0px;
+  top: 40px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.messagerName {
+  font-family: "Rubik";
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--btn-disabled-clr);
+}
+
+.name-icon-div {
+  margin-left: 10px;
+}
+
+.messagerIcon {
+  font-family: "Rubik";
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 14px;
+  letter-spacing: 0em;
+  text-align: left;
+  color: var(--btn-disabled-clr);
+}
+
+.messageIconDiv {
+  height: 14px;
+  width: 14px;
+  margin-top: 5px;
+  position: relative;
+}
+
+.alertNo {
+  width: 17px;
+  height: 17px;
+  font-family: "Rubik";
+  font-size: 10px;
+  font-weight: 500;
+  text-align: center;
+  background-color: var(--error-clr);
+  color: var(--menu-bgc);
+  border-radius: 50%;
+  position: absolute;
+  top: -4px;
+  left: 11px;
+}
+
+.alertNo p {
+  padding-top: 3px;
+}
+
+.MessagesBtn {
+  padding-bottom: 20px;
+}
+
+.MessagesBtn button {
+  width: 100%;
+  height: 40px;
+  margin: auto;
+  padding: 0 5px;
+  font-family: "Rubik";
+  font-size: 16px;
+  text-align: left;
+  font-weight: 400;
+  border: 1px solid var(--dashboard-clr);
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--dashboard-clr);
+}/*# sourceMappingURL=index.css.map */
