--- a/src/index.scss
+++ b/src/index.scss
@@ -241,8 +241,8 @@ body {
     color: var(--neutral-clr);
     font-size: 16px;
   }
-  .nameDiv {
-    width: 35%;
+  .eachNameDiv {
+    width: 43%;
     height: 100px;
     display: flex;
     justify-content: flex-start;
